[metadata]
name = example-package-gunderbolt
version = 0.0.1
author = Nick Gunderson
author_email = go2nick@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gunderbolt/pysampleproject
project_urls =
    Bug Tracker = https://github.com/gunderbolt/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
